Moved to version 1.0.3

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,6 @@
       <mat-icon>share</mat-icon>
     </button>
   </mat-toolbar>
-  <span class="content">This is a test for ArgoCD</span>
+  <h1>This is version 1.0.3</h1>
   <router-outlet />
 </main>
